Header z-index fix

--- a/app/stylus/header.styl
+++ b/app/stylus/header.styl
@@ -19,7 +19,7 @@ body > header
         transform translate3d(0, 0, 0)
     .container
         clearfix()
-        border-bottom 1px solid rgba(0,0,0,0.2)
+        border-bottom 1px solid border-color
         height 80px
         box-sizing border-box
         padding 30px 0 0 0
